<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgCream"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_normal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/percentageWH"
                    android:layout_height="@dimen/percentageWH"
                    android:background="@drawable/orange_creamthickcircle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/percentageGoal"
                    android:textColor="@color/mainPageWhiteBG"
                    android:textSize="@dimen/text_large"/>
            </FrameLayout>

            <View
                android:layout_width="@dimen/padding_large"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remainbudget"
                    android:textColor="@color/bgOrange"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_mini"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allbudget"
                    android:textColor="@color/bgOrange"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grayBG">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/needbudget"
                android:textColor="@color/mainPageWhiteBG"
                android:textSize="@dimen/text_normal"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerNeedBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grayBG">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/unneedbutdget"
                android:textColor="@color/mainPageWhiteBG"
                android:textSize="@dimen/text_normal"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerUnneedBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</ScrollView>