<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linerIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/incomeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:background="@drawable/camera_icon_bg"
                android:scaleType="fitXY"
                android:src="@drawable/img_iph_ico_unactive_businese_bonus2x"/>
            <!-- -->
        </LinearLayout>

        <View
            android:layout_width="@dimen/padding_normal"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/incomeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Salary"
            android:textColor="@color/mainPageWhiteBG"
            android:textSize="@dimen/text_small"/>
        <!-- -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/padding_normal">

            <TextView
                android:id="@+id/incomeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allValueIncome"
                android:textColor="@color/mainPageWhiteBG"
                android:textSize="@dimen/text_small"/>
            <!-- -->
            <View
                android:layout_width="@dimen/padding_small"
                android:layout_height="match_parent"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/THB"
                android:textColor="@color/mainPageWhiteBG"
                android:textSize="@dimen/text_mini"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>